# Transp-op

./: .gitignore  .pre-commit-config.yaml  .replit  .replit-agent-prompt  CLAUDE.md  Employee_Transport_Optimization_PRD_v3.md  README.md  REPLIT_CHANGES.md  REPLIT_INSTRUCTIONS.md  agents.md  build.sh  docker-compose.yml  package-lock.json  package.json  pyproject.toml  replit.md  start_backend.sh  start_production.sh  transpop_backup_20260408.sql
.claude/: launch.json  settings.json
.claude/agents/: architect.md  backend-dev.md  db-engineer.md  devops.md  docs-manager.md  frontend-dev.md  integration-engineer.md  mobile-dev.md  optimizer.md  (+5 more)
Docs/: API_ENDPOINTS.md  ARCHITECTURE.md  CHANGELOG.md  DATABASE_SCHEMA.md  DESIGN_SYSTEM.md  FRONTEND_PAGES.md  INDEX.md  LOCAL_MOBILE_FUNCTIONALITY.md  MOBILE_PAGES.md  PRD.md  PROGRESS.md  README.md  ROADMAP.md
attached_assets/: Pasted--Unexpected-Application-Error-google-is-not-defined-com_1775166058736.txt  Pasted-Unexpected-Application-Error-Objects-are-not-valid-as-a_1775189459858.txt  config_1775180737219.xlsx
backend/: .env.example  Dockerfile  clear_demo_data.py  mypy.ini  pytest.ini  requirements.txt  ruff.toml  scripts.sh  seed_configuration.py  seed_km_consommation.py  seed_point_arret.py  seed_vehicles.py
chatbot/: Dockerfile  Dockerfile.actions  config.yml  domain.yml  requirements.txt
contractor-dashboard/: Dockerfile  app.py  requirements.txt
frontend/: Dockerfile  index.html  package-lock.json  package.json  tsconfig.app.json  vite.config.ts  vitest.config.ts
mobile/: README.md  pubspec.yaml
(+1136 files in other folders)
