[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.12"
dependencies = [
    "alembic==1.14.1",
    "anyio[trio]==4.8.0",
    "asyncpg==0.30.0",
    "bcrypt==4.2.1",
    "celery[redis]==5.4.0",
    "fastapi==0.115.6",
    "geoalchemy2==0.15.2",
    "httpx==0.28.1",
    "numpy==2.2.1",
    "openpyxl==3.1.5",
    "ortools==9.11.4210",
    "passlib[bcrypt]==1.7.4",
    "psycopg2-binary==2.9.10",
    "pydantic-settings==2.7.1",
    "pydantic[email]==2.10.4",
    "pytest==8.3.4",
    "pytest-asyncio==0.25.0",
    "python-dotenv==1.0.1",
    "python-jose[cryptography]==3.3.0",
    "python-multipart==0.0.20",
    "redis==5.2.1",
    "reportlab>=4.4.3",
    "scikit-learn==1.6.1",
    "sqlalchemy[asyncio]==2.0.36",
    "uvicorn[standard]==0.34.0",
]
